@@ -3,8 +3,9 @@ improving GNU lightning:
 
 Eli Barzilay                    <eli@barzilay.org>
 Ludovic Courtes                 <ludo@chbouib.org>
+Matthew Flatt			<mflatt@cs.utah.edu>
 Laurent Michel                  <ldm@thorgal.homelinux.org>
 Basile Starynkevitch            <basile@starynkevitch.net>
+Sam Steingold			<sds@gnu.org>
 Jens Troeger                    <savage@light-speed.de>
 Tom Tromey                      <tromey@redhat.com>
-Matthew Flatt			<mflatt@cs.utah.edu>
