@@ -1,4 +1,4 @@
-@set UPDATED 25 October 2006
-@set UPDATED-MONTH October 2006
+@set UPDATED 9 January 2008
+@set UPDATED-MONTH January 2008
 @set EDITION 1.2c
 @set VERSION 1.2c
